# WebStorage

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  ТЗ_v1.1_Сетевое_Хранилище.md
.cursor/rules/: rule.mdc
backend/: Dockerfile  config.py  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_google_id.py  003_add_private_limit_bytes.py
backend/app/application/: admin_service.py  archive_service.py  archived_file_reader.py  auth_service.py  backup_service.py  file_service.py  maintenance_service.py  photo_service.py  private_service.py
backend/app/domain/: exceptions.py
backend/app/infrastructure/: archive_manager.py  disk_router.py  logging_setup.py  oauth_client.py  session_store.py  thumbnail_service.py
backend/app/presentation/: exception_handlers.py
backend/scripts/: entrypoint.py  init_db.py  init_storage.py  verify_encrypted_adapter_unit.py  verify_private_storage.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: PrivateUnlockModal.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useFileUpload.ts  useInfiniteScroll.ts  usePhotoUpload.ts  usePrivateSession.ts
frontend/src/pages/: AdminPage.tsx  AuthPage.tsx  FilesPage.tsx  PhotosPage.tsx  PrivatePage.tsx  SharedPage.tsx
frontend/src/services/: adminApi.ts  api.ts  filesApi.ts  photosApi.ts  privateApi.ts
frontend/src/store/: auth.ts  quota.ts
frontend/src/types/: files.ts  photos.ts
frontend/src/utils/: format.ts  id.ts  photoUpload.ts  (+2 more)
(+61 files in other folders)
