[project]
name = "webstorage"
version = "0.1.0"
description = "HomeCloud - self-hosted network storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<5.0.0",
    "pillow",
    "pillow-heif",
    "cryptography",
    "zstandard",
    "apscheduler",
    "pydantic-settings",
    "loguru",
    "httpx",
    "email-validator",
    "aiofiles",
    "python-multipart",
    "python-json-logger>=4.1.0",
]
